добавлен модуль для главной страницы (заготовка) написан айтем, но пока не заполнен

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
             <div class="ui-dymmy" style="height:50px;"></div>
 
-            <div class="ui-module-container">
-                <div class="ui-module ui-module-recommendation">
+            <div class="ui-module-container"  id="module-recommendation-items" >
+                <!--<div class="ui-module ui-module-recommendation">
                     <div class="ui-recommendation-filter">
 
                     </div>
@@ -133,245 +133,7 @@
                                 <div class="ui-item-like g-fr"></div>
                             </div>
                         </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
 
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
-                        <div class="ui-item-block">
-                            <div class="ui-item-level-first">
-                                <div class="ui-item-icon">
-                                    <img class="ui-item-icon-img" height="150" src="http://api.twiger.mcdir.ru/project/storage/img/product/0/1/mainImg.jpg">
-                                </div>
-                                <div class="ui-item-title">
-                                    <div class="ui-item-title-text gf-cb">SAMSUNG Galaxy S8+ 64Gb</div>
-                                    <div class="ui-dymmy" style="height:5px;"></div>
-                                    <div class="ui-item-title-text gf-cb">
-                                        <span class="ui-item-title-price-amount">1500</span>
-                                        <span class="ui-item-title-price-currency">₽</span>
-                                    </div>
-                                </div>
-
-                                <div class="ui-item-interactive g-bs">
-                                    <div class="ui-item-interactive-item g-fl g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-rating g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs gf-cb">4.5</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-comments g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">394</div>
-                                    </div>
-                                    <div class="ui-item-interactive-item g-fr g-bs">
-                                        <div class="ui-ib-icon ui-ib-icon-likes g-fl g-bs"></div>
-                                        <div class="ui-ib-count g-fr g-bs">95</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ui-item-level-second">
-                                <div class="ui-item-sale g-bs g-fl gf-cr">Скидка 25%</div>
-                                <div class="ui-item-like g-fr"></div>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="ui-dymmy" style="height:20px;"></div>
@@ -380,7 +142,7 @@
                             <div class="ui-big-button ui-big-button-icon">Загрузить еще</div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
 
             <div class="ui-dymmy" style="height:40px;"></div>
